tests/NormalTests/paczka1/fuzzy1/97421757.err
Error in line 13: 7qbdF S574 69,0
Error in line 10: S632 S632 23,8
Error in line 14: UAR6hHq7dyr A589 40,1
Error in line 24: 7qbdF A750 59,9
Error in line 25: S632 A589 73,1
Error in line 35: Wv5x89VmC S6n2 56,5
Error in line 33: Wv5x89VmC A589 54,3
Error in line 29: UAR6hHq7dyr A750 80,6
